--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta property="og:description" content="Portfolio of Lucas Srigley - Computer Engineering student at Queen's University with experience in full-stack development, AI integration, and modern web technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
+
+    <link
+    rel="icon"
+    href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><text y='50%' x='50%' text-anchor='middle' dominant-baseline='middle' font-size='32' font-family='Arial' font-weight='bold' fill='url(%23grad)'>LS</text><defs><linearGradient id='grad' x1='0%' y1='0%' x2='100%' y2='100%'><stop offset='0%' style='stop-color:%23ff6ec4;stop-opacity:1'/><stop offset='100%' style='stop-color:%23787eff;stop-opacity:1'/></linearGradient></defs></svg>"
+    type="image/svg+xml"
+  />
   </head>
 
   <body>
