--- a/index.html
+++ b/index.html
@@ -11,12 +11,7 @@
     <meta property="og:description" content="Portfolio of Lucas Srigley - Computer Engineering student at Queen's University with experience in full-stack development, AI integration, and modern web technologies." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
-
-    <link
-      rel="icon"
-      href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'><text y='50%' x='50%' text-anchor='middle' dominant-baseline='middle' font-size='45' font-family='Arial' font-weight='bold' fill='%23939CFF'>LS</text></svg>"
-      type="image/svg+xml"
-    />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
   </head>
 
   <body>
